--- a/snippets/package.json
+++ b/snippets/package.json
@@ -19,6 +19,12 @@
           "markdown"
         ],
         "path": "./markdown.json"
+      },
+      {
+        "language": [
+          "python"
+        ],
+        "path": "./python.json"
       }
 
 		]
